[gd_scene load_steps=14 format=3 uid="uid://d62phlyp568e"]

[ext_resource type="Script" path="res://Scripts/Main_Menu.gd" id="1_pu854"]
[ext_resource type="Texture2D" uid="uid://dd7wknj106c5h" path="res://Assets/Sprites/Title.png" id="2_mor0q"]
[ext_resource type="Texture2D" uid="uid://bonbqn4h8ewip" path="res://Assets/Sprites/Start_Button.png" id="3_onirk"]
[ext_resource type="Texture2D" uid="uid://d0ua4uysgmbmh" path="res://Assets/Sprites/UIBackGroundSprite.png" id="3_qq4la"]
[ext_resource type="Texture2D" uid="uid://ckiokixbk6eo3" path="res://Assets/Sprites/OptionsButton.png" id="4_lpv1d"]
[ext_resource type="Texture2D" uid="uid://c3s6wrvxhc3kh" path="res://Assets/Sprites/Start_Button_Pressed.png" id="4_tx6gk"]
[ext_resource type="Texture2D" uid="uid://dj825i5ku0imk" path="res://Assets/Sprites/QuitButton.png" id="5_3a7xd"]
[ext_resource type="Texture2D" uid="uid://djp4ova7htmm7" path="res://Assets/Sprites/Start_Button_Selected.png" id="5_mauky"]
[ext_resource type="Script" path="res://Scripts/Start_Button.gd" id="6_55xu1"]
[ext_resource type="Texture2D" uid="uid://dnqnvcvxruqmh" path="res://Assets/Sprites/OptionsButton_Pressed.png" id="7_640ed"]
[ext_resource type="Texture2D" uid="uid://b7sqbt0mibst2" path="res://Assets/Sprites/OptionsButton_Selected.png" id="8_ovpdc"]
[ext_resource type="Texture2D" uid="uid://ci5vu78coor7b" path="res://Assets/Sprites/QuitButton_Pressed.png" id="10_6oq8k"]
[ext_resource type="Texture2D" uid="uid://dey2vfo6ve86c" path="res://Assets/Sprites/QuitButton_Selected.png" id="11_7snne"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pu854")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(580, 326)
scale = Vector2(3.06019, 3.06019)
texture = ExtResource("2_mor0q")

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(0.0784314, 0.117647, 0.133333, 0.345098)
position = Vector2(342.5, 464.5)
scale = Vector2(0.591146, 0.652778)
texture = ExtResource("3_qq4la")

[node name="Start_Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 233.0
offset_top = 401.0
offset_right = 300.0
offset_bottom = 441.0
scale = Vector2(2.25, 2.25)
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Options")
texture_normal = ExtResource("3_onirk")
texture_pressed = ExtResource("4_tx6gk")
texture_focused = ExtResource("5_mauky")
script = ExtResource("6_55xu1")

[node name="Options" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 233.0
offset_top = 449.0
offset_right = 329.0
offset_bottom = 489.0
scale = Vector2(2.25, 2.25)
focus_neighbor_top = NodePath("../Start_Button")
focus_neighbor_bottom = NodePath("../Quit")
texture_normal = ExtResource("4_lpv1d")
texture_pressed = ExtResource("7_640ed")
texture_focused = ExtResource("8_ovpdc")

[node name="Quit" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 233.0
offset_top = 497.0
offset_right = 288.0
offset_bottom = 537.0
scale = Vector2(2.25, 2.25)
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Start_Button")
texture_normal = ExtResource("5_3a7xd")
texture_pressed = ExtResource("10_6oq8k")
texture_focused = ExtResource("11_7snne")

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="Start_Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
